--- a/mobilele/src/main/resources/application.yml
+++ b/mobilele/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/mobilele?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
     username: ${MYSQL_USER:root}
-    password:
+    password: 088990656512345678Vv#
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     hibernate:
@@ -30,6 +30,9 @@ management:
         include: "*"
   server:
     port: 8081
+  endpoint:
+    info:
+      enabled: true
 
 mobilele:
   admin:
